# pyappscript

./: README.md  pas.py  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  index.md  index.rst  modules.rst
pas/: __init__.py  pas.py
