[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonAppScript"
version = "0.2.0"
description = "Lightweight ASGI/WSGI web framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "oywe", email = "you@example.com" }
]
dependencies = [
    "jinja2>=3.0",
    "python-magic>=0.4.27"
]
